$Rev$
[2007/12/06]
DirBrowser.py       Fix add new directory, when opened if there are children nodes,
                    then will not fire after_expanding event bug
svn_plugin          Migirate svn tool to svn_plugin                    
mRun.py             If the caret is at the last line of the message window, after
                    more lines adding to message window, the caret will goto the 
                    end position, but if the caret is not at the last line, but
                    middle of the lines, after adding lines, the caret will not
                    jump to the end.
                    
[2007/11/28]
mRun.py             Fix message console postion bug, thanks for swordsp
FlatNotebook.py     Update to newest version for mac
SyntaxDialog.py     Fix syntaxdialog bug

[2007/11/26]
acp/python/import.py    
                    Improve default identifiers process, add type judgement
modules/wxctrl/FlatNotebook.py
                    Upgrade to the lastest version thanks to swordsp
                    
[2007/11/23]
ShellWindow.py      Add Paste and Run menu item in popup menu of shell window

[2007/11/21]
SvnSupport.py       Fix cann't support filename has space bug

[2007/11/20]
NCustomLexer.py     Improvement lexer process

[2007/11/19]
NCustomLexer.py     Add new custom lexer class

[2007/11/08]
dropfile plugin     Add dropfile plugin. thanks Tyberius Prime
InputAssistant.py   Fix Alt+X Ctrl+X key press bug

[2007/10/14]
mHelp.py            Can automatically switch lanauge according the current lanaguage

[2007/10/13]
InputAssistant.py mInputAssistant.py acp
                    Fix 'import as' bug and input assistant bug
                    
[2007/09/26]
TodoWindow.py       Fix date undefined bug

[2007/09/25]
mHelp.py            Improve Help with meide

[2007/09/24]
FindInFiles.py      Improve Enter key process

[2007/09/24]
common.py           Fix get_config_file() bug(return '', should return a default filename